Plugin Name: CoursePress Pro
Author: Marko Miljus ( Incsub ) / Rheinard Korf ( Incsub ) / Philipp Stracker / Marcin Pietrzak / Irene Mitchell / Jose Jaureguiberry / Ignacio Cruz

CHANGE LOG
=================================================

== Changelog ==

= 1.3.4.2 =
* Fixed: Mising div bracket in cp_popup_success_message template.

= 1.3.4.1 =
* Fixed: Skip search filter if query post types are bbpress types

= 1.3.4 =
* Fixed: Empty text field by default when resubmitting an answer

= 1.3.3 =
* Fixed: Compatibility issues with WP 4.5.

= 1.3.2 =
* Fixed: Session completion data outdated when instructor grades an answer.

= 1.3.1 =
* Fixed: AJAX url was not properly generated in some cases (if only admin  is SSL)

= 1.3 =
* Fixed: Console error when opening course categories.
* Fixed: Console error when opening New Course in page settings.
* Fixed: Issues with invite instructor.
* Fixed: Quizz assessment wrong answer count.
* Fixed: Mandatory wrong answer count.
* Fixed: Broken Unit Page Template If a unit or one of the unit set to be available in the future.
* Fixed: course_instructors shortcode do not print the list of instructors if no parameters set.
* Fixed: get instructor by hash query was not returning anything
* Enhance: Performance improvements
* Enhance: Improved Session class so it's completely overridable
* Other minor fixes
* Some code reorganization

= 1.2.6.7 =
* Fixed: Empty admin notification.
* Fixed: Assessments restricted for instructors from other courses.
* Fixed: Free preview not working for non default themes.
* Fixed: WooCommerce product visibility when course is created.
* Fixed: MarketPress product description not populated.
* Fixed: WooCommerce payment not processing course signup.
* Added: MarketPress product to course page redirection.
* Fixed: PHP warning for empty multiple choice module.
* Fixed: WooCommerce checkout causing blank pop-up.
* Added: Performance improvements.
* Fixed: Registration fields sanitization.

= 1.2.6.6 =