@@ -8,6 +8,7 @@ CHANGE LOG
 
 = 1.3.4.2 =
 * Fixed: Mising div bracket in cp_popup_success_message template.
+* Fixed: Redirect from WooCommerce shop main page.
 
 = 1.3.4.1 =
 * Fixed: Skip search filter if query post types are bbpress types
